Fix some spacing and links in the alert dialogs.

--- a/templates/selfsign01/scss/site-structure.scss
+++ b/templates/selfsign01/scss/site-structure.scss
@@ -27,6 +27,10 @@ header .tagline {
   margin-top:30px;
 }
 
+div.alert p a {
+  font-weight:bold;
+}
+
 @media (max-width: 995px) {
 
 header img {
